Fix gallery on safari

--- a/assets/sass/components/_photo_galery.scss
+++ b/assets/sass/components/_photo_galery.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   align-items: start;
   justify-content: center;
+  flex-shrink: 0;
 
   &__container {
     display: flex;
